objects/CS_OpportunityLineItemCSVMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Opportunity lines Mass upload mapping</description>
    <fields>
        <fullName>ApiName__c</fullName>
        <label>ApiName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>Field Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MassCreationType__c</fullName>
        <label>Mass Creation Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>CS_OpportunityLineItemCSVMap</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApiName__c</columns>
        <columns>FieldType__c</columns>
        <columns>isRequired__c</columns>
        <columns>MassCreationType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>